Fix card wrap media query. Changed breakpoint to 908px

--- a/src/App.css
+++ b/src/App.css
@@ -167,7 +167,7 @@
 
 /* Media Queries */
 
-@media(max-width: 438px) {
+@media(max-width: 908px) {
   /* General Styling */
   .content {
     width: 100%;
